Change reservations attribute from car to car_id
