# swagger/v1/swagger.yaml
@@ -75,8 +75,8 @@ paths:
               properties:
                 user_id:
                   type: integer
-                car:
-                  type: string
+                car_id:
+                  type: integer
                 city:
                   type: string
                 start_date:
